# itsmicrofast

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  api.py  exm.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c4e279ce589_tables_added.py  43ddc52023e3_sunroof_column_added_in_car.py  c190db6ddc7a_heros_teams.py  c49483b96465_index_added.py  ebe75b75d42f_add_unique_constraint_in_person_schema.py
api_schemas/: Heros.py  person.py  team.py
billing/: bill_test.ps1  billin2.psm1  billing.psm1  billing.py  billing2.py  mycelery.py  output.csv  parametrize.py  rec.py  test_parametrize.py
db/: database.py
errors/: database.py
itsreallymicrofast/: Readme.md  alembic.ini  api.py  pyproject.toml
itsreallymicrofast/alembic/versions/: 18ebeb04ef58_moving_to_many_to_many_relationships.py  5f79406514b0_initial_revision.py  fb6b6a36c433_roles_and_users_with_extra_fields.py
itsreallymicrofast/db/: database.py
itsreallymicrofast/models/: hero.py  team.py
itsreallymicrofast/operations/: hero.py  play_with_join.py  team.py
itsreallymicrofast/schemas/: hero.py  hero_team.py  roles_and_users.py  team.py
models/: Heros.py  __init__.py  book.py  car.py  person.py  team.py
operations/: Heros.py  book.py  car.py  person.py  team.py
schemas/: Heros.py  car.py  person.py
tests/integration/: conftest.py  test_api.py
tests/integration/fixtures/: database.py  operations.py
tests/integration/operations/: test_car.py  test_create_car.py
tests/unit/: conftest.py  test_car.py  test_create_car.py  test_create_person.py  test_person.py  test_references.py
