[tool.poetry]
name = "itsmicrofast"
version = "0.1.0"
description = "technologies brought together"
authors = ["VIVEK KUMAR <vivek14113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
celery = "^5.2.7"
fastapi = "^0.95.2"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
psycopg2 = "^2.9.6"
alembic = "^1.11.1"

# poetry add pre-commit   --group dev
httpx = "^0.24.1"
[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
pytest = "^7.3.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv","billing",".pytest_cache"]

